update relationships